fix(styles): Improve spacing in subscribe form

--- a/styles/_weekly.scss
+++ b/styles/_weekly.scss
@@ -53,5 +53,11 @@
         }
       }
     }
+
+    small {
+      margin-top: .5rem;
+      line-height: 1.2;
+      display: block;
+    }
   }
 }
